[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vsdebugeng_rs_hello_world"
crate-type = ["cdylib"]

[dependencies]
vsdebugeng = { path = ".." }
windows = "0.21.1"
bindings = { path = "bindings" }